# simboba

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: publish.yml
boba-evals/: .gitignore
frontend/: vite.config.ts
frontend/src/hooks/: usePolling.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Datasets.tsx  Runs.tsx
frontend/src/types/: index.ts
simboba/: __init__.py  boba.py  cli.py  config.py  database.py  eval.py  judge.py  models.py  runner.py  schemas.py  server.py
simboba/prompts/: __init__.py  generation.py  judge.py
simboba/samples/: test.py  test_chat.py
simboba/static/: app.js  index.html
simboba/static/assets/: index-BTrML3ai.js  index-ClpJhQQj.css  index-D1APp0AH.js  index-DEnDNNgI.css  index-Di3xt5W5.css  index-nkHUnk3h.js
simboba/utils/: __init__.py
simboba/utils/models/: __init__.py  llm.py
tests/: conftest.py  test_core_flows.py  test_llm.py
